# reg_simples

./: Cargo.toml  api.http  cobertura.xml  model.json  modelo_pontuacao.ipynb  readme.md  tarpaulin-report.html
src/: main.rs  model.rs
