[package]
name = "reg_simples"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6.0"

smartcore = { version = "0.3.2", features = ["serde"] }
ndarray = { version = "0.15.6", features = ["approx"] }
structopt = "0.3.26"
nalgebra = "0.32.5"
serde = "1.0.203"
bincode = "1.3.3"
serde_json = "1.0.117"
polars = "0.40.0"


[dev-dependencies]
